--- a/kanbanPI/src/views/kanbanPage.fxml
+++ b/kanbanPI/src/views/kanbanPage.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1535.0" style="-fx-background-color: #454546;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.KanbanPageController">
@@ -38,12 +39,12 @@
             <Image url="@../assets/imgs/lixo.png" />
          </image>
       </ImageView>
-      <Label layoutX="224.0" layoutY="158.0" text="A fazer" textFill="WHITE">
+      <Label layoutX="257.0" layoutY="168.0" text="A fazer" textFill="WHITE">
          <font>
             <Font size="25.0" />
          </font>
       </Label>
-      <ImageView fitHeight="573.0" fitWidth="40.0" layoutX="504.0" layoutY="173.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="530.0" fitWidth="40.0" layoutX="533.0" layoutY="183.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/imgs/linha.png" />
          </image>
@@ -53,12 +54,12 @@
             <Font size="25.0" />
          </font>
       </Label>
-      <ImageView fitHeight="573.0" fitWidth="40.0" layoutX="1031.0" layoutY="173.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="530.0" fitWidth="40.0" layoutX="1002.0" layoutY="183.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/imgs/linha.png" />
          </image>
       </ImageView>
-      <Label layoutX="1191.0" layoutY="158.0" text="Finalizado" textFill="WHITE">
+      <Label layoutX="1176.0" layoutY="168.0" text="Finalizado" textFill="WHITE">
          <font>
             <Font size="25.0" />
          </font>
@@ -91,5 +92,32 @@
             <Font size="25.0" />
          </font>
       </Label>
+      <Pane fx:id="aFazerUm" layoutX="89.0" layoutY="237.0" prefHeight="204.0" prefWidth="200.0" style="-fx-background-color: #E6E6E6;" />
+      <Pane fx:id="aFazerDois" layoutX="308.0" layoutY="237.0" prefHeight="204.0" prefWidth="200.0" style="-fx-background-color: #E6E6E6;" />
+      <Pane fx:id="aFazerTres" layoutX="89.0" layoutY="453.0" prefHeight="204.0" prefWidth="200.0" style="-fx-background-color: #E6E6E6;" />
+      <Pane fx:id="aFazerQuatro" layoutX="308.0" layoutY="453.0" prefHeight="204.0" prefWidth="200.0" style="-fx-background-color: #E6E6E6;" />
+      <Pane fx:id="fazendoUm" layoutX="558.0" layoutY="237.0" prefHeight="204.0" prefWidth="200.0" style="-fx-background-color: #E6E6E6;" />
+      <Pane fx:id="fazendoDois" layoutX="777.0" layoutY="237.0" prefHeight="204.0" prefWidth="200.0" style="-fx-background-color: #E6E6E6;" />
+      <Pane fx:id="fazendoTres" layoutX="558.0" layoutY="454.0" prefHeight="204.0" prefWidth="200.0" style="-fx-background-color: #E6E6E6;" />
+      <Pane fx:id="fazendoQuatro" layoutX="777.0" layoutY="454.0" prefHeight="204.0" prefWidth="200.0" style="-fx-background-color: #E6E6E6;" />
+      <Pane fx:id="finalizadoUm" layoutX="1027.0" layoutY="237.0" prefHeight="204.0" prefWidth="200.0" style="-fx-background-color: #E6E6E6;" />
+      <Pane fx:id="finalizadoDois" layoutX="1246.0" layoutY="237.0" prefHeight="204.0" prefWidth="200.0" style="-fx-background-color: #E6E6E6;" />
+      <Pane fx:id="finalizadoTres" layoutX="1027.0" layoutY="454.0" prefHeight="204.0" prefWidth="200.0" style="-fx-background-color: #E6E6E6;" />
+      <Pane fx:id="finalizadoQuatro" layoutX="1246.0" layoutY="454.0" prefHeight="204.0" prefWidth="200.0" style="-fx-background-color: #E6E6E6;" />
+      <ImageView fx:id="aFazerProximo" fitHeight="10.0" fitWidth="20.0" layoutX="289.0" layoutY="722.0" onMouseClicked="#aFazerProximo" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assets/imgs/setaBaixo.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="fazendoProximo" fitHeight="10.0" fitWidth="20.0" layoutX="758.0" layoutY="722.0" onMouseClicked="#fazendoProximo" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assets/imgs/setaBaixo.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="finalizadoProximo" fitHeight="10.0" fitWidth="20.0" layoutX="1226.0" layoutY="722.0" onMouseClicked="#finalizadoProximo" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assets/imgs/setaBaixo.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
