--- a/kanbanPI/src/views/newNameProject.fxml
+++ b/kanbanPI/src/views/newNameProject.fxml
@@ -224,11 +224,15 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Label fx:id="errorEditarNomeProjeto" layoutX="189.0" layoutY="166.0" textFill="RED">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </Label>
+                  <VBox alignment="CENTER" layoutX="34.0" layoutY="166.0" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="36.0" prefWidth="557.0">
+                     <children>
+                        <Label fx:id="errorEditarNomeProjeto" textFill="RED">
+                           <font>
+                              <Font size="25.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
                </children>
             </Pane>
          </children>
