--- a/kanbanPI/src/views/createProject.fxml
+++ b/kanbanPI/src/views/createProject.fxml
@@ -233,11 +233,15 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Label fx:id="errorNovoProjeto" layoutX="189.0" layoutY="267.0" textFill="RED">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </Label>
+                  <VBox alignment="CENTER" layoutX="34.0" layoutY="267.0" prefHeight="36.0" prefWidth="557.0">
+                     <children>
+                        <Label fx:id="errorNovoProjeto" textFill="RED">
+                           <font>
+                              <Font size="25.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
                </children>
             </Pane>
          </children>
