--- a/kanbanPI/src/views/newAction.fxml
+++ b/kanbanPI/src/views/newAction.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1535.0" style="-fx-background-color: #454546;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.NewActionController">
@@ -642,7 +643,7 @@
          <children>
             <Pane layoutX="455.0" layoutY="105.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="590.0" prefWidth="625.0" style="-fx-background-color: #454546; -fx-background-radius: 10px;">
                <children>
-                  <TextField fx:id="nomeAcao" layoutX="87.5" layoutY="48.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="450.0" promptText="Nome da Ação" style="-fx-background-radius: 10px;">
+                  <TextField fx:id="nomeAcao" layoutX="87.5" layoutY="53.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="450.0" promptText="Nome da Ação" style="-fx-background-radius: 10px;">
                      <font>
                         <Font size="25.0" />
                      </font>
@@ -650,7 +651,7 @@
                         <Cursor fx:constant="TEXT" />
                      </cursor>
                   </TextField>
-                  <Button fx:id="cancelarAcao" layoutX="130.0" layoutY="508.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#cancelarAcao" prefHeight="50.0" prefWidth="130.0" style="-fx-background-color: #5DC1B9; -fx-background-radius: 10px;" text="Cancelar" textFill="#454546">
+                  <Button fx:id="cancelarAcao" layoutX="130.0" layoutY="513.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#cancelarAcao" prefHeight="50.0" prefWidth="130.0" style="-fx-background-color: #5DC1B9; -fx-background-radius: 10px;" text="Cancelar" textFill="#454546">
                      <font>
                         <Font size="25.0" />
                      </font>
@@ -658,7 +659,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="criarAcao" layoutX="365.0" layoutY="508.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#criarAcao" prefHeight="50.0" prefWidth="130.0" style="-fx-background-color: #5DC1B9; -fx-background-radius: 10px;" text="Criar" textFill="#454546">
+                  <Button fx:id="criarAcao" layoutX="365.0" layoutY="513.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#criarAcao" prefHeight="50.0" prefWidth="130.0" style="-fx-background-color: #5DC1B9; -fx-background-radius: 10px;" text="Criar" textFill="#454546">
                      <font>
                         <Font size="25.0" />
                      </font>
@@ -666,11 +667,11 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <DatePicker fx:id="inicioAcao" layoutX="87.5" layoutY="122.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="450.0" promptText="Início" style="-fx-font-size: 25px;">
+                  <DatePicker fx:id="inicioAcao" layoutX="87.5" layoutY="127.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="450.0" promptText="Início" style="-fx-font-size: 25px;">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor></DatePicker>
-                  <TextField fx:id="prazoAcao" layoutX="87.5" layoutY="196.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="450.0" promptText="Prazo em dias" style="-fx-background-radius: 10px;">
+                  <TextField fx:id="prazoAcao" layoutX="87.5" layoutY="201.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="450.0" promptText="Prazo em dias" style="-fx-background-radius: 10px;">
                      <font>
                         <Font size="25.0" />
                      </font>
@@ -678,24 +679,28 @@
                         <Cursor fx:constant="TEXT" />
                      </cursor>
                   </TextField>
-                  <ComboBox fx:id="atividadeAcao" layoutX="87.5" layoutY="270.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="450.0" promptText="Atividade" style="-fx-background-radius: 10px; -fx-font-size: 25px;">
+                  <ComboBox fx:id="atividadeAcao" layoutX="87.5" layoutY="275.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="450.0" promptText="Atividade" style="-fx-background-radius: 10px; -fx-font-size: 25px;">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor></ComboBox>
-                  <ComboBox fx:id="usuarioAcao" layoutX="87.5" layoutY="344.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="450.0" promptText="Usuário responsável" style="-fx-background-radius: 10px; -fx-font-size: 25px;">
+                  <ComboBox fx:id="usuarioAcao" layoutX="87.5" layoutY="349.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="450.0" promptText="Usuário responsável" style="-fx-background-radius: 10px; -fx-font-size: 25px;">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor></ComboBox>
-                  <Label fx:id="errorNovaAcao" layoutX="189.0" layoutY="4.0" textFill="RED">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </Label>
-                  <ComboBox fx:id="areaAcao" layoutX="88.5" layoutY="418.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="450.0" promptText="Área" style="-fx-background-radius: 10px; -fx-font-size: 25px;">
+                  <ComboBox fx:id="areaAcao" layoutX="88.5" layoutY="423.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="450.0" promptText="Área" style="-fx-background-radius: 10px; -fx-font-size: 25px;">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ComboBox>
+                  <VBox alignment="CENTER" layoutX="34.0" layoutY="8.0" prefHeight="36.0" prefWidth="557.0">
+                     <children>
+                        <Label fx:id="errorNovaAcao" textFill="RED">
+                           <font>
+                              <Font size="25.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
                </children>
             </Pane>
         </children>
