--- a/kanbanPI/src/views/newActivit.fxml
+++ b/kanbanPI/src/views/newActivit.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1535.0" style="-fx-background-color: #454546;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.NewActivitController">
@@ -669,11 +670,15 @@
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor></ColorPicker>
-                  <Label fx:id="errorAtividade" layoutX="115.0" layoutY="206.0" textFill="RED">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </Label>
+                  <VBox alignment="CENTER" layoutX="34.0" layoutY="206.0" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="36.0" prefWidth="557.0">
+                     <children>
+                        <Label fx:id="errorAtividade" textFill="RED">
+                           <font>
+                              <Font size="25.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
                </children>
             </Pane>
         </children>
