--- a/kanbanPI/src/views/newAction.fxml
+++ b/kanbanPI/src/views/newAction.fxml
@@ -679,7 +679,7 @@
                         <Cursor fx:constant="TEXT" />
                      </cursor>
                   </TextField>
-                  <ComboBox fx:id="atividadeAcao" layoutX="87.5" layoutY="275.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="450.0" promptText="Atividade" style="-fx-background-radius: 10px; -fx-font-size: 25px;">
+                  <ComboBox fx:id="atividadeAcao" layoutX="87.5" layoutY="275.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#trocaCor" prefHeight="56.0" prefWidth="450.0" promptText="Atividade" style="-fx-background-radius: 10px; -fx-font-size: 25px; -fx-color: #FFFFFF;">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor></ComboBox>
